# cuioss-organization

./: .gitignore  CLAUDE.md  README.adoc  build.py  pyproject.toml
.claude/commands/: apply-branch-protection.md  apply-repo-settings.md  release-next.md  setup-consumer-repo.md  update-github-actions.md  verify-org-integration.md
.claude/skills/repo-selection/: SKILL.md
.github/: dependabot.yml  project.yml
.github/actions/assemble-test-reports/: action.yml  assemble-reports.py  generate-overview-index.py
.github/actions/read-project-config/: README.adoc  README.md  action.yml  read-config.py  schema.json
.github/workflows/: README.adoc  action-self-test.yml  codeql.yml  dependency-review.yml  maven-build.yml  maven-release.yml  python-verify.yml  release.yml  reusable-codeql.yml  reusable-dependabot-auto-merge.yml  reusable-dependency-review.yml  reusable-maven-build.yml  reusable-maven-integration-tests.yml  reusable-maven-release.yml  reusable-npm-build.yml  reusable-npm-publish.yml  reusable-pyprojectx-verify.yml  reusable-scorecards.yml  scorecards.yml
.github/workflows/examples/: dependency-review-caller.yml  maven-build-caller-custom.yml  maven-build-caller.yml  maven-release-caller.yml  scorecards-caller.yml
branch-protection/: README.adoc  config.json  config.yml  setup-branch-protection.py  setup-branch-protection.sh
docs/: Releasing.adoc  Secrets.adoc  Workflows.adoc  build-structure.adoc  cuioss-release-bot.adoc  project-yml-schema.adoc
docs/automatic-review/: README.md  coderabbit.md  gemini.md  sourcery.md
docs/workflow-examples/: dependabot-auto-merge-caller.yml  dependency-review-caller.yml  maven-build-caller-custom.yml  maven-build-caller.yml  maven-integration-tests-caller.yml  maven-release-caller.yml  npm-build-caller.yml  npm-publish-caller.yml  pyprojectx-verify-caller.yml  scorecards-caller.yml
releasing/: README.adoc
repo-settings/: README.adoc  config.json  config.yml  setup-repo-settings.py  setup-repo-settings.sh  verify-org-integration.py
ruleset-setup/: README.adoc  config.yml  setup-rulesets.sh
scripts/: read-project-config.py  update-workflow-references.py
test/: conftest.py
test/fixtures/: self-test-project.yml
test/repo-admin/: test_setup_branch_protection.py  test_setup_repo_settings.py  test_verify_org_integration.py
test/workflow/: test_assemble_reports.py  test_check_internal_pinning.py  test_check_maven_central.py  test_consumer_update_utils.py  test_generate_overview_index.py  test_read_config.py  test_update_consumer_dependency.py  test_update_consumer_repo.py  test_update_workflow_references.py  test_verify_consumer_prs.py
workflow-scripts/: check-internal-pinning.py  check-maven-central.py  consumer_update_utils.py  update-consumer-dependency.py  update-consumer-repo.py  update-workflow-references.py  verify-consumer-prs.py
