[project]
name = "cuioss-organization"
version = "0.1.0"
requires-python = ">=3.10"

# =============================================================================
# Pyprojectx Configuration
# =============================================================================

[tool.pyprojectx]
# Lock to specific Python version for consistency
lock-python-version = "3.10"

[tool.pyprojectx.main]
# Dev tools to install
requirements = [
    "uv",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyyaml>=6.0",
    "types-PyYAML>=6.0",
]

[tool.pyprojectx.aliases]
# Dependency management
install = "uv sync"
lock = "uv lock"
add = "uv add"

# Build commands with module filtering
# Usage: ./pw <command> [module]
# Examples:
#   ./pw compile                    # All scripts
#   ./pw compile workflow           # Single module
#   ./pw test repo-admin            # Single test directory
build = "uv run python build.py"
compile = "uv run python build.py compile"
test = "uv run python build.py test"
quality-gate = "uv run python build.py quality-gate"
verify = "uv run python build.py verify"
clean = "uv run python build.py clean"

# Shortcuts for common operations (no module filtering)
lint = "ruff check .github/actions/ workflow-scripts/ repo-settings/ branch-protection/ test/"
lint-fix = "ruff check .github/actions/ workflow-scripts/ repo-settings/ branch-protection/ test/ --fix"
fmt = "ruff format .github/actions/ workflow-scripts/ repo-settings/ branch-protection/ test/"
format = "ruff format .github/actions/ workflow-scripts/ repo-settings/ branch-protection/ test/"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["fixtures", "__pycache__", ".git"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = [".github/actions", "workflow-scripts", "repo-settings", "branch-protection"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = [".github/actions", "workflow-scripts", "repo-settings", "branch-protection", "test"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
